[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/VPPixel-Simplified.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 172.076, 51.3599 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 229.03, 51.3599 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 305.614
margin_top = 1.14459
margin_right = 655.614
margin_bottom = 146.145
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 402.219, 243.469 )
button_text = "Resume"
normal_color = Color( 1, 1, 1, 1 )
hover_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="CollisionShape2D" parent="ResumeButton" index="0"]
position = Vector2( 77.7914, 0 )
shape = SubResource( 2 )

[node name="ButtonLabel" parent="ResumeButton" index="1"]
modulate = Color( 1, 1, 1, 1 )
text = "Resume"

[node name="MainMenuButton" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 351.061, 382.617 )
button_text = "Main Menu"
normal_color = Color( 1, 1, 1, 1 )
hover_color = Color( 0.396078, 0.396078, 0.396078, 1 )

[node name="CollisionShape2D" parent="MainMenuButton" index="0"]
position = Vector2( 141.684, 0 )
shape = SubResource( 3 )

[node name="ButtonLabel" parent="MainMenuButton" index="1"]
modulate = Color( 1, 1, 1, 1 )
text = "Main Menu"

[node name="QuitButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 472.154, 516.614 )
button_text = "Quit"
normal_color = Color( 1, 1, 1, 1 )
hover_color = Color( 0.403922, 0.403922, 0.403922, 1 )

[node name="ButtonLabel" parent="QuitButton" index="1"]
modulate = Color( 1, 1, 1, 1 )
text = "Quit"

[editable path="ResumeButton"]

[editable path="MainMenuButton"]

[editable path="QuitButton"]
